feat: retrieve runs
